fixed scrollbar user profile page

--- a/src/Components/ReactScrollbar/style.sass
+++ b/src/Components/ReactScrollbar/style.sass
@@ -1,19 +1,31 @@
+@import '../../Styles/bin/variables'
+@import '../../Styles/bin/mixins'
+@import "../../../node_modules/rfs/sass"
+
 
 .menu-item
-  padding: 0 40px
-  margin: 5px 10px
   user-select: none
   cursor: pointer
-  border: 1px transparent solid
+
+.menu-wrapper
+  overflow: hidden
+  user-select: none
 
 .menu-item-wrapper
-  border: 1px transparent solid
+  cursor: pointer
+  position: relative
 
-.menu-item-wrapper.active
-  border: 1px blue solid
 
-.menu-item.active
-  border: 1px green solid
+//  &:hover
+//    background-color: lighten($seaWaveFont, 40%)
+//    border-bottom: 5px solid $seaWaveFont
+//
+//.menu-item-wrapper.active
+//  background-color: lighten($seaWaveFont, 40%)
+//  border-bottom: 5px solid $seaWaveFont
+
+//.menu-item.active
+//  border: 1px green solid
 
 .scroll-menu-arrow
   padding: 20px
@@ -22,4 +34,35 @@
 
 .scroll-menu-arrow--disabled
   visibility: hidden
+
+
+
+//.menu-item
+//  padding: 0 40px
+//  margin: 5px 10px
+//  user-select: none
+//  cursor: pointer
+//  border: 1px transparent solid
+//
+//.menu-wrapper
+//  overflow: hidden
+//  user-select: none
+//
+//.menu-item-wrapper
+//
+//  padding: 30px
+//
+//.menu-item-wrapper.active
+//  border: 1px blue solid
+//
+//.menu-item.active
+//  border: 1px green solid
+//
+//.scroll-menu-arrow
+//  padding: 20px
+//  cursor: pointer
+//
+//
+//.scroll-menu-arrow--disabled
+//  visibility: hidden
 
