--- a/src/Pages/UserProfile/ProfileNavigation/Tab/style.sass
+++ b/src/Pages/UserProfile/ProfileNavigation/Tab/style.sass
@@ -8,8 +8,8 @@
 
   &__item
     padding: 30px
-    cursor: pointer
-    position: relative
+    display: flex
+    z-index: 15
 
   &__item:hover
     background-color: lighten($seaWaveFont, 40%)
@@ -17,7 +17,6 @@
 
   &__link
     display: flex
-    z-index: 15
 
   &__article
     display: flex
@@ -35,7 +34,11 @@
     margin-top: -10px
 
 
-.activeTab
+.navigation-list .active
   background-color: lighten($seaWaveFont, 40%)
   border-bottom: 5px solid $seaWaveFont
+
+.activeTab
+  //background-color: lighten($seaWaveFont, 40%)
+  //border-bottom: 5px solid $seaWaveFont
 
